syntax = "proto3";

package raid_finder.messages;

message RaidBossRaw {
  string boss_name = 1;
  int32 level = 2;
  string image = 3;
  string language = 4;
}